# EngineKonzept

./: .gitignore  AGENTS.md  CODEX_RUNBOOK.md  LICENSE  Makefile  PLANS.md  README.md
python/: README.md  pyproject.toml
python/configs/: README.md  phase10_agent_lapv1_stage1_all_unique_v1.json  phase10_agent_lapv1_stage1_fast_all_unique_v1.json  phase10_agent_lapv1_stage1_v1.json  phase10_agent_lapv1_stage2_fast_all_unique_v1.json  phase10_agent_lapv1_stage2_fast_all_unique_v2.json  phase10_agent_lapv1_stage2_fast_all_unique_v3.json  phase10_agent_lapv1_stage2_fast_all_unique_v4.json  phase10_agent_lapv1_stage2_fast_all_unique_v4_auto4.json  phase10_agent_lapv1_stage2_fast_all_unique_v4_inner0.json  phase10_agent_lapv1_stage2_fast_all_unique_v4_inner1.json  phase10_agent_lapv1_stage2_fast_all_unique_v4_inner2.json  phase10_agent_lapv2_stage2_all_unique_v1.json  phase10_agent_lapv2_stage2_native_all_sources_v1.json  phase10_arena_lapv1_vs_baseline_v1.json  phase10_lapv1_stage1_10k_122k_v1.json  phase10_lapv1_stage1_all_unique_v1.json  phase10_lapv1_stage1_arena_all_unique_v1.json  phase10_lapv1_stage1_fast_all_unique_v1.json  phase10_lapv1_stage1_fast_arena_all_unique_v1.json  phase10_lapv1_stage2_fast_all_unique_v1.json  phase10_lapv1_stage2_fast_all_unique_v2.json  phase10_lapv1_stage2_fast_all_unique_v3.json  phase10_lapv1_stage2_fast_all_unique_v4.json  phase10_lapv1_stage2_fast_arena_all_unique_v1.json  phase10_lapv1_stage2_fast_arena_all_unique_v2.json  phase10_lapv1_stage2_fast_arena_all_unique_v3.json  phase10_lapv1_stage2_fast_arena_all_unique_v4.json  phase10_lapv2_stage2_all_unique_v1.json  phase10_lapv2_stage2_arena_all_unique_v1.json  phase10_lapv2_stage2_native_all_sources_v1.json  phase10_lapv2_stage2_native_arena_all_sources_v1.json  phase5_policy_seed_v1.json  phase5_proposer_v1.json  phase5_stockfish_merged_unique_factorized_v6_v1.json  phase5_stockfish_merged_unique_relational_v1_v1.json  phase5_stockfish_merged_unique_symbolic_v1.json  phase5_stockfish_pgn_current_default_v1.json  phase5_stockfish_pgn_factorized_v3_v1.json  phase5_stockfish_pgn_factorized_v4_v1.json  (+90 more)
python/scripts/: analyze_moe_expert_specialization.py  analyze_selfplay_arena_asymmetry.py  benchmark_dataset_build.py  benchmark_dataset_oracle.py  benchmark_proposer_artifacts.py  build_curriculum_stage_replay_buffer.py  build_lapv1_hard_positions_dataset.py  build_lapv1_training_dataset.py  build_lapv2_warm_start_checkpoint.py  build_opponent_head_dataset.py  build_opponent_workflow_dataset.py  build_phase10_lapv1_workflow.py  build_phase5_corpus_suite.py  build_phase7_workflow_suite.py  build_phase8_fulltargets_expanded_workflow.py  build_phase8_workflow_suite.py  build_replay_buffer.py  (+74 more)
rust/: Cargo.toml
(+647 files in other folders)
