[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enginekonzept-train"
version = "0.1.0"
description = "Training and experiment scaffolding for the EngineKonzept project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = [
    "train",
    "train.datasets",
    "train.export",
    "train.losses",
    "train.models",
    "train.trainers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

