[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enginekonzept-train"
version = "0.1.0"
description = "Training and experiment scaffolding for the EngineKonzept project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyMySQL>=1.1",
]

[project.optional-dependencies]
train = [
    "chess>=1.11",
    "torch>=2.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = [
    "train",
    "train.datasets",
    "train.eval",
    "train.export",
    "train.losses",
    "train.models",
    "train.orchestrator",
    "train.trainers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
