[package]
name = "engine-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine-app"
path = "src/main.rs"

[dependencies]
inference = { path = "../inference" }
position = { path = "../position" }
rules = { path = "../rules" }
uci-protocol = { path = "../uci-protocol" }
