[package]
name = "inference"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
action-space = { path = "../action-space" }
core-types = { path = "../core-types" }
encoder = { path = "../encoder" }
position = { path = "../position" }
rules = { path = "../rules" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.13"
